--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             font-size: 30px;
             box-shadow: inset 0 -5px 5px rgba(0, 0, 0, 0.25), 0 0 3px rgba(0, 0, 0, 0.3);
             border: 1px solid dimgrey;
+            transition: 0.2s;
+        }
+        .go:hover{
+            box-shadow: inset 0 -5px 5p rgba(0, 0, 0, 0.25), 0 0 6px rgba(0, 0, 0, 0.3);
+            transform: scale(1.1);
         }
     </style>
 </head>
